
* Fixed some FvwmTaskBar autohide problem.

* Fixed a display string problem in FvwmForm.

* Fixed a problem with FvwmTheme shadow colours.

* Fixed the CirculateSkipIcon and CirculateSkipShaded options in
  conditional commands.

* Fixed a formatting problem of the man page on AIX, Solaris, and
  some other UNIX variants.

* Fixed a problems with FvwmIconBox exiting on 64 bit platforms.

* Fixed parameters of fvwm24_convert.

* Fixed a number of building problems related to old vendor unices,
  libstroke-0.5, autoconf-2.50, bogus gnome-config and imlib-config.

* Fixed drawing of title bar buttons with MWMDecorStick.

* Fixed missing button or key events over the pan frames.

* Fixed placement of the FvwmDragWell, FvwmButtons and FvwmForm modules.

* Fixed parsing double quotes in FvwmPager's Font and SmallFont options.
  Fixed FvwmPager crash with certain font strings.

* Fixed drawing of the grid lines in an iconified FvwmPager window.

* Fixed button grabbing problem for buttons > 3 in FvwmTaskBar.

* Fixed some exotic problems with window gravity and resizing windows.

* Fixed a problem with maximizing windows with the vieport not starting
  on a page boundary.

* Fixed handling of parentheses in FvwmButtons button actions.

* Work around a key binding problem with keys that generate the same
  symbol with more than one key code (e.g. Shift-F1 = F11).

* The Desk option of FvwmBacker is compatible to earlier version.
  Desk or Page coordinates can be omitted to indicate that desk
  or page changes trigger no action at all.

* Fixed double updating of background with FvwmBacker sometimes leading
  to the wrong background.

* Fixed several escaping errors in fvwm-menu-directory, so files and
  directories containing special chars and spaces should work.

* Fixed PlacedByButton3 condition.

* Fixed vanishing windows when mapping/unmapping too fast.

* Fixed prev option of the GotoDeskAndPage command.
